# CGR

./: MELHORIAS_COLISAO.md  README.md  README_GrauA.md  apresentacao_15min.md  roteiro_apresentacao.md
2024.2/glad/: glad.h
2024.2/src/: main.cpp
3D_Model/include/: App.h  Model.h
3D_Model/src/: Camera.cpp  Renderer.cpp  Shader.cpp
Dependencies/include/: snake.h
GrauA/: .gitignore  AssetManager.h  Constants.h  Ex4.cpp  GrauA.cpp  GrauB.cpp  README.md  SegueMouse.cpp  Shader.cpp  Shader.h  Slither.cpp  Slither_old.cpp  Snake.cpp  SnakeFinal.cpp  SnakeFinal251024.cpp  Snake_Ian.cpp  System.cpp  System.h  Texture.cpp
GrauA/Classes/: Texture.cpp.old  Texture.h.old
GrauA_Vizualizador_3D/: Configurador_Cena.txt  README.md  c_cpp_properties.json  main.cpp  scene_config.txt
GrauA_Vizualizador_3D (Versão Original)/: DEBUG_SUMMARY.md
GrauA_Vizualizador_3D (Versão Original) - Copia/: README.md  debug.bat
GrauA_Vizualizador_3D (Versão Original) - Copia/models/: wall.mtl
GrauA_Vizualizador_3D (Versão Original) - Copia/src/: Bullet.h  Scene.h  stb_image.h
GrauA_Vizualizador_3D (Versão Original)/.github/: copilot-instructions.md
GrauA_Vizualizador_3D (Versão Original)/config/: scene.cfg
GrauA_Vizualizador_3D (Versão Original)/src/: ShaderProgram.h  glad.c
GrauA_Vizualizador_3D - Copia (2)/: Configurador_Cena.txt  main.cpp
GrauA_Vizualizador_3D - Copia 08.10 manhã/: main.cpp
GrauA_old/: Ex2.cpp
GrauB/: GrauB-v04122024.cpp  GrauB.cpp  IAN_Sprites.cpp  IAN_Sprites_SpawnItems.cpp  README.md  SnakeFinal.cpp  Sprites_Collision.cpp  Sprites_Collision_modificado.cpp  Sprites_Movement.cpp
GrauB_FCG/: GrauB.cpp
HelloTriangle_modificado/: Source.cpp  Sourceold.cpp
Lista1/: Ex5.cpp  Ex5_Profe.cpp  Ex6.cpp  Ex7.cpp  Ex8.cpp  Ex9.cpp  README.md  Source.cpp
Lista2/: Ex1.cpp  Ex2.cpp  Ex2Lista2_old.cpp  Ex3.cpp  Ex3_furado.cpp  Ex4.cpp  HelloTransform_old.cpp  README.md
Sabertooth/: Shader.cpp  Shader.h  System.cpp  System.h
Sabertooth_Alterado/: AssetManager.h  Shader.h  System.cpp  System.h
Slitterio_GA_IanB/: CMakeLists.txt  collision.cpp  item.cpp  main.cpp  snake.cpp
Slitterio_GA_IanB/Dependencies/include/: collision.h  item.h
Slitterio_GA_IanB/shadders/: fragment_shader.glsl  vertex_shader.glsl
Testes/3D_Model/: .gitignore  CMakeLists.txt  README.md
Testes/3D_Model/.github/: copilot-instructions.md
Testes/3D_Model/build_new/: CMakeCache.txt  cmake_install.cmake
Testes/3D_Model/include/: Camera.h  Mesh.h  Renderer.h  Shader.h  Texture.h
Testes/3D_Model/resources/materials/: cube.mtl
Testes/3D_Model/shaders/: basic.frag  basic.vert
Testes/3D_Model/src/: App.cpp  Model.cpp  Texture.cpp  main.cpp
(+224 files in other folders)
